--- a/Web/www/places.html
+++ b/Web/www/places.html
@@ -161,7 +161,7 @@
               </p>
             </div>
             <div class="actions">
-              <a href="https://en.wikipedia.org/wiki/Madrid"
+              <a href="/madrid.html"
                 >Explore &#x2192;</a
               >
             </div>
