--- a/Web/www/bilbao.html
+++ b/Web/www/bilbao.html
@@ -121,7 +121,7 @@
               class="fullscreen-img"
               data-img-src="img/places/bilbao/basque-region.png"
             >
-              <strong> Basque Country</strong> </span
+              <strong>Basque Country</strong> </span
             >, Bilbao offers visitors an unforgettable blend of
             <strong>modern architecture</strong>,
             <strong>rich traditions</strong>, exquisite cuisine, and a lively
@@ -169,8 +169,7 @@
                 the<span
                   class="fullscreen-img"
                   data-img-src="img/places/bilbao/nervion-river.jpg"
-                >
-                  <strong>Nervión River</strong>
+                  ><strong>Nervión River</strong>
                 </span>
                 , is a symbol of Bilbao's historic and cultural identity. Built
                 in the medieval era, this iconic structure has served as a
@@ -480,7 +479,7 @@
                   data-img-src="img/places/bilbao/san-juan-de-gaztelugatxe5.jpg"
                   ><strong>San Juan de Gaztelugatxe</strong></span
                 >, famously featured in
-                <a href="https://www.youtube.com/watch?v=KPLWWIOCOOQ"
+                <a href="https://www.youtube.com/watch?v=HvVkBlEGj7M"
                   ><em>Game of Thrones</em></a
                 >
                 and
@@ -501,7 +500,17 @@
           </li>
         </ul>
       </section>
-
+      <!--
+      <section id="city-video">
+        <h2>A video about the city</h2>
+        <iframe
+          width="420"
+          height="315"
+          src="https://www.youtube.com/embed/watch?v=Biu4ksqOjDs"
+        >
+        </iframe>
+      </section>
+      -->
       <section class="city-cheat-card">
         <h2>Bilbao City Cheat Card</h2>
         <table class="styled-table">
