added href for Tokyo

--- a/Web/www/index.html
+++ b/Web/www/index.html
@@ -118,7 +118,7 @@
           </li>
           <li class="destination">
             <img src="/img/places/tokyo.jpg" alt="City views of Japan" />
-            <p>Tokyo <strong>Japan</strong></p>
+            <a href="/#"><p>Tokyo <strong>Japan</strong></p></a>
           </li>
         </ul>
       </section>
