--- a/Web/www/bilbao.html
+++ b/Web/www/bilbao.html
@@ -39,8 +39,7 @@
     <link rel="stylesheet" href="/styles/cities/cities-shared.css" />
     <link rel="stylesheet" href="/styles/cities/bilbao.css" />
     <!-- JavaScript -->
-    <script src="/js/shared.js" defer></script>
-    <script src="/js/cities-shared.js" defer></script>
+    <script src="/js/small-cities-shared.js" defer></script>
 
     <title>Travel Page</title>
   </head>
