--- a/Web/www/madrid.html
+++ b/Web/www/madrid.html
@@ -14,6 +14,14 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Slab:wght@100..900&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Slab:wght@100..900&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <!-- Favicon -->
     <link
       rel="apple-touch-icon"
@@ -266,14 +274,71 @@
           </li>
         </ul>
       </section>
-
       <section id="cities-foods">
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
+        <h2>Cities Foods & Desserts</h2>
+        <div class="cards">
+          <article class="card card--1">
+            <div class="card__img"></div>
+            <a href="#" class="card_link">
+              <div class="card__img--hover"></div>
+            </a>
+            <div class="card__info">
+              <span class="card__category"> Food</span>
+              <h3 class="card__title">Tortilla Española (Spanish Omelet)</h3>
+              <!-- <span class="card__by">by <a href="#" class="card__author" title="author">Celeste Mills</a></span> -->
+            </div>
+          </article>
+
+          <article class="card card--2">
+            <div class="card__img"></div>
+            <a href="#" class="card_link">
+              <div class="card__img--hover"></div>
+            </a>
+            <div class="card__info">
+              <span class="card__category"> Food</span>
+              <h3 class="card__title">Torreznos</h3>
+              <!-- <span class="card__by">by <a href="#" class="card__author" title="author">John Doe</a></span> -->
+            </div>
+          </article>
+
+          <article class="card card--3">
+            <div class="card__img"></div>
+            <a href="#" class="card_link">
+              <div class="card__img--hover"></div>
+            </a>
+            <div class="card__info">
+              <span class="card__category"> Food</span>
+              <h3 class="card__title">
+                Callos a la Madrileña (Madrid-style tripe)
+              </h3>
+              <!-- <span class="card__by">by <a href="#" class="card__author" title="author">John Doe</a></span> -->
+            </div>
+          </article>
+
+          <article class="card card--4">
+            <div class="card__img"></div>
+            <a href="#" class="card_link">
+              <div class="card__img--hover"></div>
+            </a>
+            <div class="card__info">
+              <span class="card__category"> Dessert</span>
+              <h3 class="card__title">Flan (Crème Caramel)</h3>
+              <!-- <span class="card__by">by <a href="#" class="card__author" title="author">John Doe</a></span> -->
+            </div>
+          </article>
+
+          <article class="card card--5">
+            <div class="card__img"></div>
+            <a href="#" class="card_link">
+              <div class="card__img--hover"></div>
+            </a>
+            <div class="card__info">
+              <span class="card__category"> Dessert</span>
+              <h3 class="card__title">Churros</h3>
+              <!-- <span class="card__by">by <a href="#" class="card__author" title="author">John Doe</a></span> -->
+            </div>
+          </article>
+        </div>
       </section>
       <section id="city-video"></section>
       <section class="city-cheat-card"></section>
