--- a/Web/www/izmir.html
+++ b/Web/www/izmir.html
@@ -121,13 +121,13 @@
             <strong>beautiful beaches</strong>, lively festivals, and vibrant
             nightlife. From the
             <span
-              class="fullscreen-img"
+              class="fullscreen-img city-introduction"
               data-img-src="img/places/izmir/ephesus-trip.jpg"
               >ancient city of Ephesus</span
             >
             to the lively streets of
             <span
-              class="fullscreen-img"
+              class="fullscreen-img city-introduction"
               data-img-src="img/places/izmir/alsancak.webp"
               >Alsancak</span
             >, Izmir is full of places to explore and
