--- a/Web/www/madrid.html
+++ b/Web/www/madrid.html
@@ -127,14 +127,14 @@
           <p>
             Discover <strong>Madrid</strong>, a city where
             <em>history</em> meets <em>modern vibrancy</em>. From the grand
-            <strong>Royal Palace</strong> and the lively
-            <strong>Plaza Mayor</strong> to world-class museums like the
+             <a class="ancre" href="#idRoyalPalace"><strong>Royal Palace</strong></a> and the lively
+            <a  class="ancre" href="#plazaMayor"><strong>Plaza Mayor</strong></a> to world-class museums like the
             <strong>Prado</strong>, Madrid offers rich <em>culture</em> and
             <em>stunning architecture</em>.
           </p>
 
           <p>
-            Enjoy authentic Spanish flavors at
+            Enjoy authentic <a class="ancre" href="#cities-foods">Spanish flavors</a> at
             <strong>Mercado de San Miguel</strong>, experience the city's
             legendary <em>nightlife</em> in <strong>Malasaña</strong> and
             <em>Chueca</em>, or relax in the serene
