--- a/Web/www/madrid.html
+++ b/Web/www/madrid.html
@@ -127,14 +127,18 @@
           <p>
             Discover <strong>Madrid</strong>, a city where
             <em>history</em> meets <em>modern vibrancy</em>. From the grand
-             <a class="ancre" href="#idRoyalPalace"><strong>Royal Palace</strong></a> and the lively
-            <a  class="ancre" href="#plazaMayor"><strong>Plaza Mayor</strong></a> to world-class museums like the
-            <strong>Prado</strong>, Madrid offers rich <em>culture</em> and
-            <em>stunning architecture</em>.
+            <a class="internal-link" href="#idRoyalPalace"
+              ><strong>Royal Palace</strong></a
+            >
+            and the lively
+            <a class="internal-link" href="#plazaMayor"><strong>Plaza Mayor</strong></a>
+            to world-class museums like the <strong>Prado</strong>, Madrid
+            offers rich <em>culture</em> and <em>stunning architecture</em>.
           </p>
 
           <p>
-            Enjoy authentic <a class="ancre" href="#cities-foods">Spanish flavors</a> at
+            Enjoy authentic
+            <a class="internal-link" href="#cities-foods">Spanish flavors</a> at
             <strong>Mercado de San Miguel</strong>, experience the city's
             legendary <em>nightlife</em> in <strong>Malasaña</strong> and
             <em>Chueca</em>, or relax in the serene
@@ -153,124 +157,135 @@
       <section class="cities-beauties">
         <ul>
           <li>
-            <div class="parallax" id="idRoyalPalace">
-              <div class="caption">
-                <span class="border">Royal Palace of Madrid</span>
+            <article>
+              <div class="parallax" id="idRoyalPalace">
+                <div class="caption">
+                  <span class="border">Royal Palace of Madrid</span>
+                </div>
               </div>
-            </div>
-            <p>
-              The <strong>Royal Palace of Madrid</strong> (<em
-                >Palacio Real de Madrid</em
-              >) is one of the most iconic landmarks in Spain and a must-visit
-              destination for history and architecture lovers. As the official
-              residence of the Spanish royal family, it stands as a grand symbol
-              of <em>Spain’s rich heritage</em> and <em>royal elegance</em>.
-            </p>
+              <p>
+                The <strong>Royal Palace of Madrid</strong> (<em
+                  >Palacio Real de Madrid</em
+                >) is one of the most iconic landmarks in Spain and a must-visit
+                destination for history and architecture lovers. As the official
+                residence of the Spanish royal family, it stands as a grand
+                symbol of <em>Spain’s rich heritage</em> and
+                <em>royal elegance</em>.
+              </p>
 
-            <p>
-              Built in the 18th century, the palace boasts an
-              <strong>impressive Baroque and Neoclassical design</strong>, with
-              over <em>3,400 rooms</em> adorned with stunning frescoes,
-              luxurious chandeliers, and exquisite tapestries. Visitors can
-              explore the majestic <strong>Throne Room</strong>, the
-              breathtaking <strong>Royal Armory</strong>, and the lavishly
-              decorated <em>Hall of Mirrors</em>.
-            </p>
+              <p>
+                Built in the 18th century, the palace boasts an
+                <strong>impressive Baroque and Neoclassical design</strong>,
+                with over <em>3,400 rooms</em> adorned with stunning frescoes,
+                luxurious chandeliers, and exquisite tapestries. Visitors can
+                explore the majestic <strong>Throne Room</strong>, the
+                breathtaking <strong>Royal Armory</strong>, and the lavishly
+                decorated <em>Hall of Mirrors</em>.
+              </p>
 
-            <p>
-              Surrounded by the scenic <strong>Plaza de la Armería</strong> and
-              the beautiful <strong>Sabatini Gardens</strong>, the palace offers
-              breathtaking views and a peaceful atmosphere. Witness the grand
-              <em>Changing of the Guard</em> ceremony or stroll through its
-              historic halls to experience the grandeur of Spanish royalty.
-            </p>
+              <p>
+                Surrounded by the scenic
+                <strong>Plaza de la Armería</strong> and the beautiful
+                <strong>Sabatini Gardens</strong>, the palace offers
+                breathtaking views and a peaceful atmosphere. Witness the grand
+                <em>Changing of the Guard</em> ceremony or stroll through its
+                historic halls to experience the grandeur of Spanish royalty.
+              </p>
 
-            <p>
-              Whether you're a history enthusiast, an architecture admirer, or a
-              traveler seeking cultural immersion, the
-              <strong>Royal Palace of Madrid</strong> is an unforgettable
-              highlight of the city.
-            </p>
+              <p>
+                Whether you're a history enthusiast, an architecture admirer, or
+                a traveler seeking cultural immersion, the
+                <strong>Royal Palace of Madrid</strong> is an unforgettable
+                highlight of the city.
+              </p>
+            </article>
           </li>
           <li>
-            <div class="parallax" id="plazaMayor">
-              <div class="caption">
-                <span class="border">Plaza Mayor</span>
+            <article>
+              <div class="parallax" id="plazaMayor">
+                <div class="caption">
+                  <span class="border">Plaza Mayor</span>
+                </div>
               </div>
-            </div>
-            <p>
-              The <strong>Plaza Mayor</strong> is one of Madrid’s most famous
-              and historic squares, located in the heart of the city. Built in
-              the 17th century under the reign of King Philip III, this grand
-              plaza is a masterpiece of <em>Spanish architecture</em>
-              and a central gathering place for locals and visitors alike.
-            </p>
+              <p>
+                The <strong>Plaza Mayor</strong> is one of Madrid’s most famous
+                and historic squares, located in the heart of the city. Built in
+                the 17th century under the reign of King Philip III, this grand
+                plaza is a masterpiece of <em>Spanish architecture</em>
+                and a central gathering place for locals and visitors alike.
+              </p>
 
-            <p>
-              Surrounded by elegant <strong>three-story buildings</strong> with
-              picturesque balconies and <em>arcaded walkways</em>, Plaza Mayor
-              offers a unique atmosphere that blends history with modern-day
-              vibrancy. At its center stands the iconic
-              <strong>statue of Philip III</strong>, a symbol of Madrid’s royal
-              past.
-            </p>
+              <p>
+                Surrounded by elegant
+                <strong>three-story buildings</strong> with picturesque
+                balconies and <em>arcaded walkways</em>, Plaza Mayor offers a
+                unique atmosphere that blends history with modern-day vibrancy.
+                At its center stands the iconic
+                <strong>statue of Philip III</strong>, a symbol of Madrid’s
+                royal past.
+              </p>
 
-            <p>
-              Today, Plaza Mayor is a lively hub filled with traditional cafés,
-              restaurants, and cultural events. Visitors can enjoy authentic
-              Spanish flavors at
-              <strong>Casa de la Panadería</strong>, explore artisan shops, or
-              experience seasonal markets like the famous
-              <em>Christmas Market</em> in December.
-            </p>
+              <p>
+                Today, Plaza Mayor is a lively hub filled with traditional
+                cafés, restaurants, and cultural events. Visitors can enjoy
+                authentic Spanish flavors at
+                <strong>Casa de la Panadería</strong>, explore artisan shops, or
+                experience seasonal markets like the famous
+                <em>Christmas Market</em> in December.
+              </p>
 
-            <p>
-              Whether you're admiring the historic architecture, tasting
-              Madrid’s
-              <strong>delicious tapas</strong>, or simply soaking in the vibrant
-              atmosphere, the <strong>Plaza Mayor</strong> is a must-visit
-              landmark that captures the essence of the city.
-            </p>
+              <p>
+                Whether you're admiring the historic architecture, tasting
+                Madrid’s
+                <strong>delicious tapas</strong>, or simply soaking in the
+                vibrant atmosphere, the <strong>Plaza Mayor</strong> is a
+                must-visit landmark that captures the essence of the city.
+              </p>
+            </article>
           </li>
           <li>
-            <div class="parallax" id="retiroParc">
-              <div class="caption">
-                <span class="border">Retiro Park</span>
+            <article>
+              <div class="parallax" id="retiroParc">
+                <div class="caption">
+                  <span class="border">Retiro Park</span>
+                </div>
               </div>
-            </div>
-            <p>
-              <strong>Retiro Park</strong> (<em>Parque del Buen Retiro</em>) is
-              a breathtaking green oasis in the heart of Madrid, offering a
-              peaceful escape from the city's hustle and bustle. Covering over
-              <strong>125 hectares</strong>, this historic park is one of
-              Madrid’s most beloved landmarks, blending <em>natural beauty</em>,
-              <em>artistic elegance</em>, and <em>cultural heritage</em>.
-            </p>
+              <p>
+                <strong>Retiro Park</strong> (<em>Parque del Buen Retiro</em>)
+                is a breathtaking green oasis in the heart of Madrid, offering a
+                peaceful escape from the city's hustle and bustle. Covering over
+                <strong>125 hectares</strong>, this historic park is one of
+                Madrid’s most beloved landmarks, blending
+                <em>natural beauty</em>, <em>artistic elegance</em>, and
+                <em>cultural heritage</em>.
+              </p>
 
-            <p>
-              Originally a royal retreat in the 17th century, Retiro Park is now
-              a public space filled with scenic pathways, lush gardens, and
-              stunning monuments. The highlight of the park is the
-              <strong>Great Pond</strong> (<em>Estanque Grande</em>), where
-              visitors can enjoy a relaxing boat ride while admiring the
-              majestic <strong>Monument to Alfonso XII</strong>.
-            </p>
+              <p>
+                Originally a royal retreat in the 17th century, Retiro Park is
+                now a public space filled with scenic pathways, lush gardens,
+                and stunning monuments. The highlight of the park is the
+                <strong>Great Pond</strong> (<em>Estanque Grande</em>), where
+                visitors can enjoy a relaxing boat ride while admiring the
+                majestic <strong>Monument to Alfonso XII</strong>.
+              </p>
 
-            <p>
-              Other must-see attractions include the
-              <strong>Crystal Palace</strong> (<em>Palacio de Cristal</em>), a
-              breathtaking glass pavilion hosting contemporary art exhibitions,
-              and the beautifully landscaped <em>Rose Garden</em>. Throughout
-              the park, you’ll also find impressive fountains, open-air
-              performances, and talented street artists.
-            </p>
+              <p>
+                Other must-see attractions include the
+                <strong>Crystal Palace</strong> (<em>Palacio de Cristal</em>), a
+                breathtaking glass pavilion hosting contemporary art
+                exhibitions, and the beautifully landscaped
+                <em>Rose Garden</em>. Throughout the park, you’ll also find
+                impressive fountains, open-air performances, and talented street
+                artists.
+              </p>
 
-            <p>
-              Whether you're looking to take a leisurely stroll, enjoy a picnic
-              under ancient trees, or immerse yourself in Madrid’s rich history
-              and culture, <strong>Retiro Park</strong>
-              is a must-visit destination that offers something for everyone.
-            </p>
+              <p>
+                Whether you're looking to take a leisurely stroll, enjoy a
+                picnic under ancient trees, or immerse yourself in Madrid’s rich
+                history and culture, <strong>Retiro Park</strong>
+                is a must-visit destination that offers something for everyone.
+              </p>
+            </article>
           </li>
         </ul>
       </section>
