--- a/Web/www/places.html
+++ b/Web/www/places.html
@@ -96,7 +96,7 @@
       <ul>
         <li>
           <img src="/img/places/izmir.jpeg" alt="City of Izmir" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Izmir</h2>
               <p>
@@ -107,14 +107,14 @@
                 offering vibrant culture, historic sites, and Aegean charm.
               </p>
             </div>
-            <div class="actions">
+            <nav class="actions">
               <a href="/izmir.html">Explore &#x2192;</a>
-            </div>
-          </div>
+            </nav>
+          </article>
         </li>
         <li>
           <img src="/img/places/bilbao.webp" alt="City of Bilbao" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Bilbao</h2>
               <p>
@@ -126,16 +126,14 @@
                 offers a unique blend of tradition and innovation.
               </p>
             </div>
-            <div class="actions">
-              <a href="/bilbao.html"
-                >Explore &#x2192;</a
-              >
-            </div>
-          </div>
+            <nav class="actions">
+              <a href="/bilbao.html">Explore &#x2192;</a>
+            </nav>
+          </article>
         </li>
         <li>
           <img src="/img/places/madrid.webp" alt="city of Madrid" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Madrid</h2>
               <p>
@@ -160,19 +158,17 @@
                 must-visit destination.
               </p>
             </div>
-            <div class="actions">
-              <a href="/madrid.html"
-                >Explore &#x2192;</a
-              >
-            </div>
-          </div>
+            <nav class="actions">
+              <a href="/madrid.html">Explore &#x2192;</a>
+            </nav>
+          </article>
         </li>
         <li>
           <img
             src="/img/places/montpellier-place-comedie.jpg"
             alt="montpellier place de comedie"
           />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Montpellier</h2>
               <p>
@@ -185,16 +181,16 @@
                 experience.
               </p>
             </div>
-            <div class="actions">
+            <nav class="actions">
               <a href="https://en.wikipedia.org/wiki/Montpellier"
                 >Explore &#x2192;</a
               >
-            </div>
-          </div>
+            </nav>
+          </article>
         </li>
         <li>
           <img src="/img/places/mugla.jpg" alt="Muğla landscape" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Muğla</h2>
               <p>
@@ -207,17 +203,17 @@
                 both relaxation and adventure.
               </p>
             </div>
-            <div class="actions">
+            <nav class="actions">
               <a href="https://en.wikipedia.org/wiki/Muğla">Explore &#x2192;</a>
-            </div>
-          </div>
+            </nav>
+          </article>
         </li>
         <li>
           <img
             src="/img/places/san-sebastian.jpg"
             alt="Beach of San-Sebastian"
           />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>San Sebastián</h2>
               <p>
@@ -230,16 +226,16 @@
                 both food lovers and beachgoers.
               </p>
             </div>
-            <div class="actions">
+            <nav class="actions">
               <a href="https://en.wikipedia.org/wiki/San_Sebastian"
                 >Explore &#x2192;</a
               >
-            </div>
-          </div>
+            </nav>
+          </article>
         </li>
         <li>
           <img src="/img/places/paris.jpg" alt="Paris city" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Paris</h2>
               <p>
@@ -252,14 +248,14 @@
                 destination for culture and style.
               </p>
             </div>
-            <div class="actions">
+            <nav class="actions">
               <a href="https://en.wikipedia.org/wiki/Paris">Explore &#x2192;</a>
-            </div>
-          </div>
+            </nav>
+          </article>
         </li>
         <li>
           <img src="/img/places/istanbul.webp" alt="Istanbul Bosphorus" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Istanbul</h2>
               <p>
@@ -285,16 +281,16 @@
                 come together beautifully.
               </p>
             </div>
-            <div class="actions">
+            <nav class="actions">
               <a href="https://en.wikipedia.org/wiki/Istanbul"
                 >Explore &#x2192;</a
               >
-            </div>
-          </div>
+            </nav>
+          </article>
         </li>
         <li>
           <img src="/img/places/tokyo.jpg" alt="Tokyo skyline" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Tokyo</h2>
               <p>
@@ -307,14 +303,14 @@
                 futuristic experiences.
               </p>
             </div>
-            <div class="actions">
+            <nav class="actions">
               <a href="https://en.wikipedia.org/wiki/Tokyo">Explore &#x2192;</a>
-            </div>
-          </div>
+            </nav>
+          </article>
         </li>
         <li>
           <img src="/img/places/bali.jpg" alt="Bali beach" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Bali</h2>
               <p>
@@ -326,14 +322,14 @@
                 spiritual atmosphere, and world-class resorts.
               </p>
             </div>
-            <div class="actions">
+            <nav class="actions">
               <a href="https://en.wikipedia.org/wiki/Bali">Explore &#x2192;</a>
-            </div>
-          </div>
+            </nav>
+          </article>
         </li>
         <li>
           <img src="/img/places/vichy.jpg" alt="Vichy landscape" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Vichy</h2>
               <p>
@@ -346,14 +342,14 @@
                 destination.
               </p>
             </div>
-            <div class="actions">
+            <nav class="actions">
               <a href="https://en.wikipedia.org/wiki/Vichy">Explore &#x2192;</a>
-            </div>
-          </div>
+            </nav>
+          </article>
         </li>
         <li>
           <img src="/img/places/marseille.jpg" alt="Marseille views" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Marseille</h2>
               <p>
@@ -365,12 +361,12 @@
                 rich cultural diversity.
               </p>
             </div>
-            <div class="actions">
+            <nav class="actions">
               <a href="https://en.wikipedia.org/wiki/Marseille"
                 >Explore &#x2192;</a
               >
-            </div>
-          </div>
+            </nav>
+          </article>
         </li>
       </ul>
     </main>
