--- a/Web/www/places.html
+++ b/Web/www/places.html
@@ -96,7 +96,7 @@
       <ul>
         <li>
           <img src="/img/places/izmir.jpeg" alt="City of Izmir" />
-          <article class="item-content">
+          <div class="item-content">
             <div>
               <h2>Izmir</h2>
               <p>
@@ -107,14 +107,14 @@
                 offering vibrant culture, historic sites, and Aegean charm.
               </p>
             </div>
-            <nav class="actions">
+            <div class="actions">
               <a href="/izmir.html">Explore &#x2192;</a>
-            </nav>
-          </article>
+            </div>
+          </div>
         </li>
         <li>
           <img src="/img/places/bilbao.webp" alt="City of Bilbao" />
-          <article class="item-content">
+          <div class="item-content">
             <div>
               <h2>Bilbao</h2>
               <p>
@@ -126,14 +126,16 @@
                 offers a unique blend of tradition and innovation.
               </p>
             </div>
-            <nav class="actions">
-              <a href="/bilbao.html">Explore &#x2192;</a>
-            </nav>
-          </article>
+            <div class="actions">
+              <a href="/bilbao.html"
+                >Explore &#x2192;</a
+              >
+            </div>
+          </div>
         </li>
         <li>
           <img src="/img/places/madrid.webp" alt="city of Madrid" />
-          <article class="item-content">
+          <div class="item-content">
             <div>
               <h2>Madrid</h2>
               <p>
@@ -158,17 +160,19 @@
                 must-visit destination.
               </p>
             </div>
-            <nav class="actions">
-              <a href="/madrid.html">Explore &#x2192;</a>
-            </nav>
-          </article>
+            <div class="actions">
+              <a href="/madrid.html"
+                >Explore &#x2192;</a
+              >
+            </div>
+          </div>
         </li>
         <li>
           <img
             src="/img/places/montpellier-place-comedie.jpg"
             alt="montpellier place de comedie"
           />
-          <article class="item-content">
+          <div class="item-content">
             <div>
               <h2>Montpellier</h2>
               <p>
@@ -181,16 +185,16 @@
                 experience.
               </p>
             </div>
-            <nav class="actions">
+            <div class="actions">
               <a href="https://en.wikipedia.org/wiki/Montpellier"
                 >Explore &#x2192;</a
               >
-            </nav>
-          </article>
+            </div>
+          </div>
         </li>
         <li>
           <img src="/img/places/mugla.jpg" alt="Muğla landscape" />
-          <article class="item-content">
+          <div class="item-content">
             <div>
               <h2>Muğla</h2>
               <p>
@@ -203,17 +207,17 @@
                 both relaxation and adventure.
               </p>
             </div>
-            <nav class="actions">
+            <div class="actions">
               <a href="https://en.wikipedia.org/wiki/Muğla">Explore &#x2192;</a>
-            </nav>
-          </article>
+            </div>
+          </div>
         </li>
         <li>
           <img
             src="/img/places/san-sebastian.jpg"
             alt="Beach of San-Sebastian"
           />
-          <article class="item-content">
+          <div class="item-content">
             <div>
               <h2>San Sebastián</h2>
               <p>
@@ -226,16 +230,16 @@
                 both food lovers and beachgoers.
               </p>
             </div>
-            <nav class="actions">
+            <div class="actions">
               <a href="https://en.wikipedia.org/wiki/San_Sebastian"
                 >Explore &#x2192;</a
               >
-            </nav>
-          </article>
+            </div>
+          </div>
         </li>
         <li>
           <img src="/img/places/paris.jpg" alt="Paris city" />
-          <article class="item-content">
+          <div class="item-content">
             <div>
               <h2>Paris</h2>
               <p>
@@ -248,14 +252,14 @@
                 destination for culture and style.
               </p>
             </div>
-            <nav class="actions">
+            <div class="actions">
               <a href="https://en.wikipedia.org/wiki/Paris">Explore &#x2192;</a>
-            </nav>
-          </article>
+            </div>
+          </div>
         </li>
         <li>
           <img src="/img/places/istanbul.webp" alt="Istanbul Bosphorus" />
-          <article class="item-content">
+          <div class="item-content">
             <div>
               <h2>Istanbul</h2>
               <p>
@@ -281,16 +285,16 @@
                 come together beautifully.
               </p>
             </div>
-            <nav class="actions">
+            <div class="actions">
               <a href="https://en.wikipedia.org/wiki/Istanbul"
                 >Explore &#x2192;</a
               >
-            </nav>
-          </article>
+            </div>
+          </div>
         </li>
         <li>
           <img src="/img/places/tokyo.jpg" alt="Tokyo skyline" />
-          <article class="item-content">
+          <div class="item-content">
             <div>
               <h2>Tokyo</h2>
               <p>
@@ -303,14 +307,14 @@
                 futuristic experiences.
               </p>
             </div>
-            <nav class="actions">
+            <div class="actions">
               <a href="https://en.wikipedia.org/wiki/Tokyo">Explore &#x2192;</a>
-            </nav>
-          </article>
+            </div>
+          </div>
         </li>
         <li>
           <img src="/img/places/bali.jpg" alt="Bali beach" />
-          <article class="item-content">
+          <div class="item-content">
             <div>
               <h2>Bali</h2>
               <p>
@@ -322,14 +326,14 @@
                 spiritual atmosphere, and world-class resorts.
               </p>
             </div>
-            <nav class="actions">
+            <div class="actions">
               <a href="https://en.wikipedia.org/wiki/Bali">Explore &#x2192;</a>
-            </nav>
-          </article>
+            </div>
+          </div>
         </li>
         <li>
           <img src="/img/places/vichy.jpg" alt="Vichy landscape" />
-          <article class="item-content">
+          <div class="item-content">
             <div>
               <h2>Vichy</h2>
               <p>
@@ -342,14 +346,14 @@
                 destination.
               </p>
             </div>
-            <nav class="actions">
+            <div class="actions">
               <a href="https://en.wikipedia.org/wiki/Vichy">Explore &#x2192;</a>
-            </nav>
-          </article>
+            </div>
+          </div>
         </li>
         <li>
           <img src="/img/places/marseille.jpg" alt="Marseille views" />
-          <article class="item-content">
+          <div class="item-content">
             <div>
               <h2>Marseille</h2>
               <p>
@@ -361,12 +365,12 @@
                 rich cultural diversity.
               </p>
             </div>
-            <nav class="actions">
+            <div class="actions">
               <a href="https://en.wikipedia.org/wiki/Marseille"
                 >Explore &#x2192;</a
               >
-            </nav>
-          </article>
+            </div>
+          </div>
         </li>
       </ul>
     </main>
