--- a/Web/www/register.html
+++ b/Web/www/register.html
@@ -101,7 +101,7 @@
         id="registration-form"
         novalidate
       >
-        <fieldset>
+        <section>
           <ul>
             <li>
               <label for="username">Your username</label>
@@ -141,10 +141,10 @@
               />
             </li>
           </ul>
-        </fieldset>
+        </section>
 
         <section class="form-buttons">
-          <button type="submit">Register</button>
+          <button>Register</button>
           <button type="reset">Clear</button>
         </section>
       </form>
