--- a/Web/www/index.html
+++ b/Web/www/index.html
@@ -105,28 +105,20 @@
         <h2>Highlights</h2>
         <ul id="destinations">
           <li class="destination">
-            <article>
-              <img src="/img/places/madrid.webp" alt="Madrid views" />
-              <a href="/madrid.html">
-                <p>Madrid <strong>Spain</strong></p>
-              </a>
-            </article>
+            <img src="/img/places/madrid.webp" alt="Madrid views" />
+            <a href="/madrid.html">
+              <p>Madrid <strong>Spain</strong></p>
+            </a>
           </li>
           <li class="destination">
-            <article>
-              <img src="/img/places/izmir.jpeg" alt="Izmir Clock Tower " />
-              <a href="/izmir.html">
-                <p>Izmir <strong>Turkey</strong></p>
-              </a>
-            </article>
+            <img src="/img/places/izmir.jpeg" alt="Izmir Clock Tower " />
+            <a href="/izmir.html">
+              <p>Izmir <strong>Turkey</strong></p>
+            </a>
           </li>
           <li class="destination">
-            <article>
-              <img src="/img/places/tokyo.jpg" alt="City views of Japan" />
-              <a href="/#"
-                ><p>Tokyo <strong>Japan</strong></p></a
-              >
-            </article>
+            <img src="/img/places/tokyo.jpg" alt="City views of Japan" />
+            <a href="/#"><p>Tokyo <strong>Japan</strong></p></a>
           </li>
         </ul>
       </section>
