--- a/Web/www/login.html
+++ b/Web/www/login.html
@@ -102,7 +102,7 @@
         id="registration-form"
         novalidate
       >
-        <fieldset>
+        <section>
           <ul>
             <li>
               <label for="username">Your username</label>
@@ -120,10 +120,10 @@
               <input type="text" name="userpwd" id="userpwd" required />
             </li>
           </ul>
-        </fieldset>
+        </section>
 
         <section class="form-buttons">
-          <button type="submit">Login</button>
+          <button>Login</button>
           <button type="reset">Clear</button>
         </section>
         <section>
@@ -133,7 +133,7 @@
         </section>
       </form>
 
-      <section id="login-response">
+      <section id="login-responce">
         <p id="message-area"></p>
       </section>
     </main>
