git folder modification

--- a/Web/www/places.html
+++ b/Web/www/places.html
@@ -96,7 +96,7 @@
       <ul>
         <li>
           <img src="/img/places/izmir.jpeg" alt="City of Izmir" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Izmir</h2>
               <p>
@@ -110,11 +110,11 @@
             <div class="actions">
               <a href="/izmir.html">Explore &#x2192;</a>
             </div>
-          </div>
+          </article>
         </li>
         <li>
           <img src="/img/places/bilbao.webp" alt="City of Bilbao" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Bilbao</h2>
               <p>
@@ -127,15 +127,13 @@
               </p>
             </div>
             <div class="actions">
-              <a href="/bilbao.html"
-                >Explore &#x2192;</a
-              >
+              <a href="/bilbao.html">Explore &#x2192;</a>
             </div>
-          </div>
+          </article>
         </li>
         <li>
           <img src="/img/places/madrid.webp" alt="city of Madrid" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Madrid</h2>
               <p>
@@ -161,18 +159,16 @@
               </p>
             </div>
             <div class="actions">
-              <a href="/madrid.html"
-                >Explore &#x2192;</a
-              >
+              <a href="/madrid.html">Explore &#x2192;</a>
             </div>
-          </div>
+          </article>
         </li>
         <li>
           <img
             src="/img/places/montpellier-place-comedie.jpg"
             alt="montpellier place de comedie"
           />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Montpellier</h2>
               <p>
@@ -190,11 +186,11 @@
                 >Explore &#x2192;</a
               >
             </div>
-          </div>
+          </article>
         </li>
         <li>
           <img src="/img/places/mugla.jpg" alt="Muğla landscape" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Muğla</h2>
               <p>
@@ -210,14 +206,14 @@
             <div class="actions">
               <a href="https://en.wikipedia.org/wiki/Muğla">Explore &#x2192;</a>
             </div>
-          </div>
+          </article>
         </li>
         <li>
           <img
             src="/img/places/san-sebastian.jpg"
             alt="Beach of San-Sebastian"
           />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>San Sebastián</h2>
               <p>
@@ -235,11 +231,11 @@
                 >Explore &#x2192;</a
               >
             </div>
-          </div>
+          </article>
         </li>
         <li>
           <img src="/img/places/paris.jpg" alt="Paris city" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Paris</h2>
               <p>
@@ -255,11 +251,11 @@
             <div class="actions">
               <a href="https://en.wikipedia.org/wiki/Paris">Explore &#x2192;</a>
             </div>
-          </div>
+          </article>
         </li>
         <li>
           <img src="/img/places/istanbul.webp" alt="Istanbul Bosphorus" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Istanbul</h2>
               <p>
@@ -290,11 +286,11 @@
                 >Explore &#x2192;</a
               >
             </div>
-          </div>
+          </article>
         </li>
         <li>
           <img src="/img/places/tokyo.jpg" alt="Tokyo skyline" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Tokyo</h2>
               <p>
@@ -310,11 +306,11 @@
             <div class="actions">
               <a href="https://en.wikipedia.org/wiki/Tokyo">Explore &#x2192;</a>
             </div>
-          </div>
+          </article>
         </li>
         <li>
           <img src="/img/places/bali.jpg" alt="Bali beach" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Bali</h2>
               <p>
@@ -329,11 +325,11 @@
             <div class="actions">
               <a href="https://en.wikipedia.org/wiki/Bali">Explore &#x2192;</a>
             </div>
-          </div>
+          </article>
         </li>
         <li>
           <img src="/img/places/vichy.jpg" alt="Vichy landscape" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Vichy</h2>
               <p>
@@ -349,11 +345,11 @@
             <div class="actions">
               <a href="https://en.wikipedia.org/wiki/Vichy">Explore &#x2192;</a>
             </div>
-          </div>
+          </article>
         </li>
         <li>
           <img src="/img/places/marseille.jpg" alt="Marseille views" />
-          <div class="item-content">
+          <article class="item-content">
             <div>
               <h2>Marseille</h2>
               <p>
@@ -370,7 +366,7 @@
                 >Explore &#x2192;</a
               >
             </div>
-          </div>
+          </article>
         </li>
       </ul>
     </main>
