--- a/Web/www/login.html
+++ b/Web/www/login.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -102,7 +102,7 @@
         id="registration-form"
         novalidate
       >
-        <section>
+        <fieldset>
           <ul>
             <li>
               <label for="username">Your username</label>
@@ -120,10 +120,10 @@
               <input type="text" name="userpwd" id="userpwd" required />
             </li>
           </ul>
-        </section>
+        </fieldset>
 
         <section class="form-buttons">
-          <button>Login</button>
+          <button type="submit">Login</button>
           <button type="reset">Clear</button>
         </section>
         <section>
@@ -133,7 +133,7 @@
         </section>
       </form>
 
-      <section id="login-responce">
+      <section id="login-response">
         <p id="message-area"></p>
       </section>
     </main>
