--- a/Web/www/bilbao.html
+++ b/Web/www/bilbao.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Visit Bilbao, the heart of Spain’s Basque Country. Discover modern architecture, the Guggenheim Museum, vibrant old town, and rich culinary traditions."
+    />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
