--- a/Web/www/izmir.html
+++ b/Web/www/izmir.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Explore Madrid's rich culture, iconic landmarks like the Royal Palace and Plaza Mayor, and indulge in local cuisine and vibrant nightlife."
+    />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
