--- a/Web/www/places.html
+++ b/Web/www/places.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Browse top travel destinations worldwide. Discover highlights of cities like Madrid, Izmir, Bilbao, Istanbul, Tokyo, and more on Travel Goals."
+    />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
